--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "linkedin_clone": "file:..",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
